rnsc/tests/snapshots/general-method_access_flags-private_static_final.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class MethodPrivateStaticFinal
.super java/lang/Object

.method private static final helper ()V
    .code stack 1 locals 0
      return
    .code_end
.method_end
.class_end
----- INPUT -----
.class MethodPrivateStaticFinal
.super java/lang/Object

.method private static final helper ()V
  .code stack 1 locals 0
    return
  .code_end
.method_end
.class_end
----- STDERR -----

----- HASH -----
82324169d1a2e099b8dc44a732daedee5dc2bec24af9c04228696f705f0d1f53
