rnsc/tests/snapshots/general-method_access_flags-protected.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class MethodProtected
.super java/lang/Object

.method protected helper ()V
    .code stack 1 locals 0
      return
    .code_end
.method_end
.class_end
----- INPUT -----
.class MethodProtected
.super java/lang/Object

.method protected helper ()V
  .code stack 1 locals 0
    return
  .code_end
.method_end
.class_end
----- STDERR -----

----- HASH -----
f4995dcaac730fc6165b426e37768c7d1e70a2f4ba725c823ce7776a89ee2139
