rnsc/tests/snapshots/general-method_access_flags-public.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class MethodPublic
.super java/lang/Object

.method public main ()V
    .code stack 1 locals 0
      return
    .code_end
.method_end
.class_end
----- INPUT -----
.class MethodPublic
.super java/lang/Object

.method public main ()V
  .code stack 1 locals 0
    return
  .code_end
.method_end
.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/MethodPublic.class
  Last modified <DATE>; size 111 bytes
  SHA-256 checksum c0e5f480230be81c336d6998656cf96c1765ed28c5cdedcd403c77119a5cb10e
class MethodPublic
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // MethodPublic
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 1, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MethodPublic
  #4 = Utf8               MethodPublic
  #5 = Utf8               main
  #6 = Utf8               ()V
  #7 = Utf8               Code
{
  public void main();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code:
      stack=1, locals=0, args_size=1
         0: return
}
