rnsc/tests/snapshots/general-method_access_flags-public_static.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class MethodPublicStatic
.super java/lang/Object

.method public static main ()V
    .code stack 1 locals 0
      return
    .code_end
.method_end
.class_end
----- INPUT -----
.class MethodPublicStatic
.super java/lang/Object

.method public static main ()V
  .code stack 1 locals 0
    return
  .code_end
.method_end
.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/MethodPublicStatic.class
  Last modified <DATE>; size 117 bytes
  SHA-256 checksum 206e8d9081b1e4516e2b39b797da5ec3bd1fb27aeb5b5ad6e63211fa37dbb9a0
class MethodPublicStatic
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // MethodPublicStatic
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 1, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MethodPublicStatic
  #4 = Utf8               MethodPublicStatic
  #5 = Utf8               main
  #6 = Utf8               ()V
  #7 = Utf8               Code
{
  public static void main();
    descriptor: ()V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code:
      stack=1, locals=0, args_size=0
         0: return
}
