rnsc/tests/snapshots/general-method_access_flags-public_synchronized.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class MethodPublicSynchronized
.super java/lang/Object

.method public synchronized main ()V
    .code stack 1 locals 0
      return
    .code_end
.method_end
.class_end
----- INPUT -----
.class MethodPublicSynchronized
.super java/lang/Object

.method public synchronized main ()V
  .code stack 1 locals 0
    return
  .code_end
.method_end
.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/MethodPublicSynchronized.class
  Last modified <DATE>; size 123 bytes
  SHA-256 checksum 9b3a65ac97cd885878bdaf2092401c0a0f53167fc742dc376b91a14a26d66ad9
class MethodPublicSynchronized
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // MethodPublicSynchronized
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 1, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MethodPublicSynchronized
  #4 = Utf8               MethodPublicSynchronized
  #5 = Utf8               main
  #6 = Utf8               ()V
  #7 = Utf8               Code
{
  public synchronized void main();
    descriptor: ()V
    flags: (0x0021) ACC_PUBLIC, ACC_SYNCHRONIZED
    Code:
      stack=1, locals=0, args_size=1
         0: return
}
