rnsc/tests/snapshots/general-method_access_flags-static.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class MethodStatic
.super java/lang/Object

.method static main ()V
    .code stack 1 locals 0
      return
    .code_end
.method_end
.class_end
----- INPUT -----
.class MethodStatic
.super java/lang/Object

.method static main ()V
  .code stack 1 locals 0
    return
  .code_end
.method_end
.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/MethodStatic.class
  Last modified <DATE>; size 111 bytes
  SHA-256 checksum ed181575cbdfe2b5acebd482a1f4d3e4c497302f5b4463c66702d9c861cc5170
class MethodStatic
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // MethodStatic
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 1, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MethodStatic
  #4 = Utf8               MethodStatic
  #5 = Utf8               main
  #6 = Utf8               ()V
  #7 = Utf8               Code
{
  static void main();
    descriptor: ()V
    flags: (0x0008) ACC_STATIC
    Code:
      stack=1, locals=0, args_size=0
         0: return
}
